@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Use getrusage(2) instead of times(2) for finer grained measurements.
+   (Fixes GH#2)
 
 1.000000  2015-09-03 15:21:30-07:00 America/Los_Angeles
  - Move data from response headers to simple plack values
